Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18285

Crash in TextMaskMaterial

    XMLWordPrintable

Details

    • 6c23827e1d4631b8e76c28f86ba44f225c3f204b

    Description

      Running the qsgfocusscope auto test (in qtquick2) causes the following warning to be printed:

      QWARN : tst_qsgfocusscope::nested() TextMaskMaterial::setContext: Glyph cache already belongs to different context

      and then a crash in TextMaskMaterial::ensureUpToDate().

      From what I can see the crash is caused by creating and using a QSGView, then destroying it, then creating another QSGView.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            brasser Michael Brasser (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes