Get glyph cache for correct context in SceneGraph

Initially we had a separate glyph cache for the scene graph by using
0 as the cache key always. However, this fails when the scene graph is
rebuilt with a new context, e.g. when you delete an old QSGView and
create a new one. It is uncertain how this will work if the scene graph
renders in a separate thread.

Task-number: QTBUG-18285
Reviewed-by: Kim